rs/macros/tests/ui/gservice_fails_override_wrong_name_correct_id.stderr
error[E0080]: evaluation panicked: Method `WrongName` not found in base service
  --> tests/ui/gservice_fails_override_wrong_name_correct_id.rs:21:1
   |
21 | #[service(extends = BaseService)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `inherited_service_meta::_` failed here
